fix(config): add params.author to fix RSS build on Hugo v0.157.0
Hugo v0.157.0 removed site.Author. The PaperMod RSS template
falls back to it when params.author is unset, breaking the build.

--- a/hugo.toml
+++ b/hugo.toml
@@ -12,6 +12,9 @@ theme = 'PaperMod'
   ShowPostNavLinks = true
   ShowBreadCrumbs = true
 
+[params.author]
+  name = "Mahesh Babu Gorantla"
+
 [params.homeInfoParams]
   Title = "Hi, I'm Mahesh Babu Gorantla"
   Content = "Full-stack engineer writing about Python, Django, Kubernetes, and backend development"
